fix: description in ai4-metadata

--- a/ai4-metadata.yml
+++ b/ai4-metadata.yml
@@ -2,15 +2,17 @@ metadata_version: 2.0.0
 title: Cold coral segmentation
 summary: "Cold corals segmentation model"
 description: |-
-  Cold corals segmentation model
+  Cold corals segmentation model: 
   This AI-powered segmentation model, based on YOLOv8, is designed to accurately detect and segment two vital cold-water coral species: *Desmophyllum pertusum* and *Madrepora oculata*.
   The model was developed by COST (IEO-CSIC).
 
   <img class='fit', src='https://raw.githubusercontent.com/ai4os-hub/cold-coral-segmentation/main/data/model-predictions.png'/>
-  <em>Model predictions (left) and Raw image (right) for live coral species (Desmophyllum pertusum in red and Madrepora oculata in green) in a cold-water coral reef ecosystem.</em/>
+  
+  <em>Model predictions (left) and Raw image (right) for live coral species (Desmophyllum pertusum in red and Madrepora oculata in green) in a cold-water coral reef ecosystem.</em>
 
 
-  *Acknowledgments*
+  **Acknowledgments**
+
   This project received funding from multiple sources, including the European Union’s LIFE program 
   through the LIFE IP INTEMARES project (LIFE15 IPE ES 012) and BIODIV project through the Biodiv_A3 Action. 
   BIODIV project: “Scientific and technical advice for the monitoring of marine biodiversity: protected marine areas 
