fix: acknowledgment in ai4-metadata.yml

--- a/ai4-metadata.yml
+++ b/ai4-metadata.yml
@@ -13,13 +13,11 @@ description: |-
 
   **Acknowledgments**
 
-  This project received funding from multiple sources, including the European Union’s LIFE program 
-  through the LIFE IP INTEMARES project (LIFE15 IPE ES 012) and BIODIV project through the Biodiv_A3 Action. 
-  BIODIV project: “Scientific and technical advice for the monitoring of marine biodiversity: protected marine areas 
-  and species of state competence (2022–2025)”, funded by the European Union—NextGenerationEU through the Recovery, 
-  Transformation and Resilience Plan and promoted by the Directorate General for Biodiversity, Forests and 
-  Desertification of the Ministry for Ecological Transition and the Demographic Challenge{C}{C} and CSIC, 
-  through the Spanish Institute of Oceanography (IEO).
+  This project received funding from multiple sources, including:
+
+  * The European Union’s LIFE program through the LIFE IP INTEMARES project (LIFE15 IPE ES 012)
+  * The European Union’s BIODIV project through the Biodiv_A3 Action. BIODIV project: “Scientific and technical advice for the monitoring of marine biodiversity: protected marine areas and species of state competence (2022–2025)”, funded by the European Union—NextGenerationEU through the Recovery, Transformation and Resilience Plan and promoted by the Directorate General for Biodiversity, Forests and Desertification of the Ministry for Ecological Transition and the Demographic Challenge   
+  * CSIC, through the Spanish Institute of Oceanography (IEO).
 
 # doi: http://add-some-DOI-url.com
 dates:
